alignment fixed

--- a/src/components/common/split-screen/split-screen.module.scss
+++ b/src/components/common/split-screen/split-screen.module.scss
@@ -2,6 +2,7 @@
   width: 97vw;
   height: 90vh;
   display: flex;
+  margin: 0 auto;
   .left-pane {
     height: 100%;
     border: 1px solid #e7e7e7;
